Fixed divider wrap

--- a/src/components/MovieCard/MovieCard.module.scss
+++ b/src/components/MovieCard/MovieCard.module.scss
@@ -1,7 +1,15 @@
+@import "../../styles/mixins.scss";
+
 .poster {
   height: 255px;
   width: 160px;
 
   border-radius: 6px;
   background-size: cover;
+}
+
+.card {
+  @include onPhone {
+    width: 350px;
+  }
 }
